--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script data-jsd-embedded data-key="1fce5b92-e2c9-41c5-a1d5-19076d179c45" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
+      <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
